OpenJMLTest/releaseTests/testCheck1/expected
A.java:1: error: incompatible types: int cannot be converted to boolean
public class A { /*@ invariant 0; */ }
                               ^
1 error
